[gd_scene load_steps=7 format=3 uid="uid://eqp8hu56t0t2"]

[ext_resource type="Script" uid="uid://dg3m22uumw48d" path="res://scenes/pause_menu/pause_menu.gd" id="1_5bgjm"]
[ext_resource type="FontFile" uid="uid://0nd5mqqmlmh8" path="res://assets/BotsmaticDemo-MXOr.ttf" id="2_j7hes"]
[ext_resource type="StyleBox" uid="uid://csaef33gba7tq" path="res://styles/button/button_style.tres" id="3_xv10j"]
[ext_resource type="StyleBox" uid="uid://rncv8buaenqw" path="res://styles/button/pressed_style.tres" id="4_ocp6o"]
[ext_resource type="StyleBox" uid="uid://6p1tycmppw42" path="res://styles/button/hover_style.tres" id="5_8h0xb"]
[ext_resource type="LabelSettings" uid="uid://ckge21bq7fha8" path="res://styles/button/game_over_style.tres" id="6_mfkio"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 100
script = ExtResource("1_5bgjm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.21568628)

[node name="Back" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 19.0
offset_right = 775.0
offset_bottom = 586.0
color = Color(0.25882354, 1, 1, 1)

[node name="Pausa" type="Label" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 17.0
offset_right = 773.0
offset_bottom = 135.0
text = "pausa"
label_settings = ExtResource("6_mfkio")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -123.0
offset_right = 149.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j7hes")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_xv10j")
theme_override_styles/pressed = ExtResource("4_ocp6o")
theme_override_styles/hover = ExtResource("5_8h0xb")
text = "continuar"

[node name="ReiniciarButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j7hes")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_xv10j")
theme_override_styles/pressed = ExtResource("4_ocp6o")
theme_override_styles/hover = ExtResource("5_8h0xb")
text = "reiniciar"

[node name="ConfigButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j7hes")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_xv10j")
theme_override_styles/pressed = ExtResource("4_ocp6o")
theme_override_styles/hover = ExtResource("5_8h0xb")
text = "configuracion"

[node name="MenuButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j7hes")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_xv10j")
theme_override_styles/pressed = ExtResource("4_ocp6o")
theme_override_styles/hover = ExtResource("5_8h0xb")
text = "menu principal"
